--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:jakin.ng03@gmail.com">email</a></li>
+        		<li><a href="https://github.com/xueenwu">github.com/xueenwu</a></li>
 			</ul>
 		</footer>
 	</body>
