--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 	<head>
 		<title>It is I. </title>
-		<!-- link to main stylesheet -->
+		link to main stylesheet
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
@@ -18,8 +18,10 @@
     		<div class="blurb">
         		<h1>Hello.</h1>
 				<p> Yes. <a href="/about"> wow.... </a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
+    		</div>
+			/.blurb
+		</div>
+		/.container
 		<footer>
     		<ul>
         		<li><a href="mailto:jakin.ng03@gmail.com">email</a></li>
@@ -27,4 +29,16 @@
 			</ul>
 		</footer>
 	</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Basic HTML File</title>
+  </head>
+  <body>
+    <h1>Hello, world!</h1>
+  </body>
 </html>
