--- a/index.html
+++ b/index.html
@@ -1,37 +1,49 @@
-<!-- <!DOCTYPE html>
-<html>
-	<head>
-		<title>It is I. </title>
-		link to main stylesheet
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hello.</h1>
-				<p> Yes. <a href="/about"> wow.... </a></p>
-    		</div>
-			/.blurb
-		</div>
-		/.container
-		<footer>
-    		<ul>
-        		<li><a href="mailto:jakin.ng03@gmail.com">email</a></li>
-        		<li><a href="https://github.com/xueenwu">github.com/xueenwu</a></li>
-			</ul>
-		</footer>
-	</body>
-</html> -->
-
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Jakin Ng</title>
+    <!-- link to main stylesheet -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/projects">Projects & Notes</a></li>
+        <!-- <li><a href="/about">About Me</a></li> -->
+        <li><a href="/resume">Resume</a></li>
+      </ul>
+    </nav>
+    <div class="container">
+      <div class="blurb">
+        <h1>Hello.</h1>
+        <p>Yes. <a href="/about"> wow.... </a></p>
+      </div>
+      /.blurb
+    </div>
+    /.container
+    <footer>
+      <ul>
+        <li><a href="mailto:jakinng@mit.edu">email</a></li>
+        <li><a href="https://github.com/xueenwu">github.com/xueenwu</a></li>
+      </ul>
+    </footer>
+  </body>
+</html>
+
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -52,4 +64,4 @@
       crossorigin="anonymous"
     ></script>
   </body>
-</html>
+</html> -->
