--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Jakin Ng</title>
-    <!-- link to main stylesheet -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-      crossorigin="anonymous"
+    <meta
+      name="description"
+      content="Jakin's personal website, using Bootstrap!"
     />
+    <meta name="author" content="Jakin Ng, 2022" />
+
+    <title>Jakin's Website · 2022</title>
+    <!-- link to main stylesheet -->
+    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet" />
   </head>
   <body>
     <script
