--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 
     <title>Jakin's Website · 2022</title>
     <!-- link to main stylesheet -->
-    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet" />
   </head>
   <body>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"
     ></script>
+    <script src="../bootstrap/js/bootstrap.min.js"></script>
+
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
