--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
         class="navbar-toggler"
         type="button"
         data-toggle="collapse"
-        data-target="#navbarTogglerDemo02"
-        aria-controls="navbarTogglerDemo02"
+        data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
         aria-expanded="false"
         aria-label="Toggle navigation"
       >
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="#">Home</a>
           </li>
@@ -42,7 +43,7 @@
             <a class="nav-link" href="/projects">Projects & Notes</a>
           </li>
           <li class="nav-item">
-            <a href="/resume">Resume</a>
+            <a class="nav-link" href="/resume">Resume</a>
           </li>
         </ul>
       </div>
@@ -61,7 +62,7 @@
       >
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
           <li class="ms-3">
-            <a class="text-muted" href="mailto:jakinng@mit.edu">email</a>
+            <a class="text-muted" href="mailto:jakinng@mit.edu">email me!</a>
           </li>
           <li class="ms-3">
             <a class="text-muted" href="https://github.com/xueenwu"
@@ -73,26 +74,3 @@
     </div>
   </body>
 </html>
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Basic HTML File</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html> -->
