--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/index">Home</a>
+            <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="/projects">Projects & Notes</a>
@@ -49,6 +49,7 @@
     </nav>
 
     <h2>projects</h2>
+    <p>girlsxmro</p>
 
     <div class="container">
       <footer
