--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
         </ul>
       </div>
     </nav>
+    <div>
+      <p> Tips from halfway through college: mathpix.com is super helpful to be able to include the problem statement in your LaTeX for problem sets without having to type all of it up. </p>
+    </div>
 
     <!-- <div class="container">
       <div class="blurb">
